Revert to old list collection style in tests to support java 1.8 build target